<resources>
    <string name="app_name">Panda Library</string>
    <string name="library">Библиотека</string>
    <string name="my_library">Моя Библиотека</string>
    <string name="news_activity_name">Новости</string>
    <string name="open_book">Открытая книга</string>


    <string name="titlePreview">Заголовок</string>
    <string name="genrePreview">Жанр: </string>
    <string name="seriesPreview">Серия: </string>
    <string name="languagePreview">Язык: </string>
    <string name="yearPreview">Год: </string>
    <string name="pagesPreview">Страниц: </string>
    <string name="authorPreview">Автор: </string>
    <string name="descriptionPreview">Описание книги: </string>
    <string name="descriptionNews">Описание новости: </string>
    <string name="textOfNews">Текст новости: </string>
    <!--   <string name=""></string>-->


    <!-- Названия фрагментов в активностях -->

    <!-- Названия фрагментов в активити: Библиотека -->
    <string name="noveltyFrag">Новинки</string>
    <string name="genre">Жанры</string>
    <string name="search">Поиск</string>

    <!-- Названия некоторых фрагментов в активити: Моя Библиотека -->
    <string name="reading">Читаю</string>
    <string name="read">Прочитано</string>
    <string name="not_interested">ТОПКА</string>
    <string name="queue">В очереди</string>
    <!-- <string name=""></string> -->

    <!-- Названия некоторых фрагментов в активити: Новости -->
    <string name="news">Новости</string>
    <string name="noveltyBooks">Новинки книг</string>
    <string name="reviews">Рецензии</string>
    <string name="screenVersion">Экранизации</string>


    <!-- Slide menu and... -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>
    <string name="action_search">Поиск</string>


    <!-- Studied  -->
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
    <string name="title_activity_preview">PreviewActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_news_preview">NewsPreviewActivity</string>










    <string name="lorem">В данном случае AppBarLayout это синяя view, размещенная под исчезающим изображением, она содержит Toolbar, LinearLayout с заголовком и подзаголовком и TabLayout с несколькими вкладками. Мы можем управлять поведением элементов AppbarLayout с помощью параметров: layout_scrollFlags. Значение: scroll в данном случае присутствует почти во всех элементах view, если бы этот параметр не был указан ни в одном из элементов AppbarLayout, он остался бы неизменным, позволяя прокручиваемому контенту проходить позади него.
 Со значением: snap, мы избегаем попадания в полу-анимационного-состояния, это значит, что анимация всегда скрывает или отображает полный размер view LinearLayout который содержит заголовок и подзаголовок будет всегда отображен при прокручивании вверх, (enterAlways значение), и TabLayout будет видим всегда так как на него не установлен ни один флаг.
 Как видите настоящая мощь AppbarLayout определяется должным управлением его флагами прокрутки в определенных view. В данном случае AppBarLayout это синяя view, размещенная под исчезающим изображением, она содержит Toolbar, LinearLayout с заголовком и подзаголовком и TabLayout с несколькими вкладками. Мы можем управлять поведением элементов AppbarLayout с помощью параметров: layout_scrollFlags. Значение: scroll в данном случае присутствует почти во всех элементах view, если бы этот параметр не был указан ни в одном из элементов AppbarLayout, он остался бы неизменным, позволяя прокручиваемому контенту проходить позади него.
 Со значением: snap, мы избегаем попадания в полу-анимационного-состояния, это значит, что анимация всегда скрывает или отображает полный размер view LinearLayout который содержит заголовок и подзаголовок будет всегда отображен при прокручивании вверх, (enterAlways значение), и TabLayout будет видим всегда так как на него не установлен ни один флаг.
 Как видите настоящая мощь AppbarLayout определяется должным управлением его флагами прокрутки в определенных view. В данном случае AppBarLayout это синяя view, размещенная под исчезающим изображением, она содержит Toolbar, LinearLayout с заголовком и подзаголовком и TabLayout с несколькими вкладками. Мы можем управлять поведением элементов AppbarLayout с помощью параметров: layout_scrollFlags. Значение: scroll в данном случае присутствует почти во всех элементах view, если бы этот параметр не был указан ни в одном из элементов AppbarLayout, он остался бы неизменным, позволяя прокручиваемому контенту проходить позади него.Со значением: snap, мы избегаем попадания в полу-анимационного-состояния, это значит, что анимация всегда скрывает или отображает полный размер view.
 LinearLayout который содержит заголовок и подзаголовок будет всегда отображен при прокручивании вверх, (enterAlways значение), и TabLayout будет видим всегда так как на него не установлен ни один флаг.
 Как видите настоящая мощь AppbarLayout определяется должным управлением его флагами прокрутки в определенных view. В данном случае AppBarLayout это синяя view, размещенная под исчезающим изображением, она содержит Toolbar, LinearLayout с заголовком и подзаголовком и TabLayout с несколькими вкладками.
 Мы можем управлять поведением элементов AppbarLayout с помощью параметров: layout_scrollFlags. Значение: scroll в данном случае присутствует почти во всех элементах view, если бы этот параметр не был указан ни в одном из элементов AppbarLayout, он остался бы неизменным, позволяя прокручиваемому контенту проходить позади него.
 Со значением: snap, мы избегаем попадания в полу-анимационного-состояния, это значит, что анимация всегда скрывает или отображает полный размер view.
 LinearLayout который содержит заголовок и подзаголовок будет всегда отображен при прокручивании вверх, (enterAlways значение), и TabLayout будет видим всегда так как на него не установлен ни один флаг.
 Как видите настоящая мощь AppbarLayout определяется должным управлением его флагами прокрутки в определенных view.</string>

</resources>
