<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/library"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/library" />
        <item
            android:id="@+id/my_library"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/my_library" />
        <item
            android:id="@+id/news"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/news_activity_name" />
        <item
            android:id="@+id/open_book"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/open_book" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
