<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.ContentFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="140dp"
                    android:layout_height="180dp">

                    <ImageView
                        android:id="@+id/coverBook"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/titlePreview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="1dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/titlePreview"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="1dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp" />

                    <TextView
                        android:id="@+id/authorPreview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="1dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/authorPreview" />

                    <TextView
                        android:id="@+id/seriesPreview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="1dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/seriesPreview" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="1dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/genrePreview" />

                    <TextView
                        android:id="@+id/languagePreview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="1dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/languagePreview" />

                    <TextView
                        android:id="@+id/yearPreview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="1dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/yearPreview" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/descriptionPreview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:minLines="1"
            android:paddingBottom="1dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:text="@string/descriptionPreview" />

    </LinearLayout>

</android.support.v7.widget.ContentFrameLayout>