<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.ContentFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/tools">

    <!-- A CardView that contains a TextView -->
    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="5dp"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="140dp"
                        android:layout_height="180dp">

                        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_margin="5dp"
                            android:foreground="?android:attr/selectableItemBackground"
                            card_view:cardCornerRadius="7dp"
                            card_view:cardElevation="6dp">

                            <ImageView
                                android:id="@+id/coverBook"
                                android:scaleType="fitXY"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent" />

                        </android.support.v7.widget.CardView>

                    </FrameLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/titleBook"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="1dp"
                            android:paddingLeft="5dp"
                            android:paddingTop="5dp"
                            android:text="@string/titlePreview"
                            android:textAlignment="center" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="1dp"
                            android:paddingLeft="5dp"
                            android:paddingTop="5dp" />

                        <LinearLayout
                            android:id="@+id/linearLayoutStatusBook"
                            android:layout_width="wrap_content"
                            android:layout_height="36dp"
                            android:layout_gravity="center"
                            android:orientation="horizontal">

                            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                android:id="@+id/reading"
                                android:layout_width="30dp"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_margin="4dp"
                                android:foreground="?android:attr/selectableItemBackground"
                                card_view:cardCornerRadius="7dp"
                                card_view:cardElevation="4dp">

                                <ImageView
                                    android:id="@+id/imReading"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:scaleType="fitXY"
                                    />

                            </android.support.v7.widget.CardView>

                            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                android:id="@+id/queue"
                                android:layout_width="30dp"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_margin="4dp"
                                android:foreground="?android:attr/selectableItemBackground"
                                android:onClick="onClickQueue"
                                card_view:cardCornerRadius="7dp"
                                card_view:cardElevation="4dp">

                                <ImageView
                                    android:id="@+id/imQueue"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:scaleType="fitXY"
                                    />

                            </android.support.v7.widget.CardView>

                            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                android:id="@+id/read"
                                android:layout_width="30dp"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_margin="4dp"
                                android:foreground="?android:attr/selectableItemBackground"
                                android:onClick="onClickRead"
                                card_view:cardCornerRadius="7dp"
                                card_view:cardElevation="4dp">

                                <ImageView
                                    android:id="@+id/imRead"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:scaleType="fitXY"
                                    />

                            </android.support.v7.widget.CardView>

                            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                android:id="@+id/notInterest"
                                android:layout_width="30dp"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_margin="4dp"
                                android:foreground="?android:attr/selectableItemBackground"
                                android:onClick="onClickNotInterest"
                                card_view:cardCornerRadius="7dp"
                                card_view:cardElevation="4dp">

                                <ImageView
                                    android:id="@+id/imNotInterest"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:scaleType="fitXY"
                                    />

                            </android.support.v7.widget.CardView>

                        </LinearLayout>

                        <TextView
                            android:id="@+id/authorBook"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="1dp"
                            android:paddingLeft="5dp"
                            android:paddingTop="5dp"
                            android:text="@string/authorPreview" />

                        <TextView
                            android:id="@+id/genreBook"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="1dp"
                            android:paddingLeft="5dp"
                            android:paddingTop="5dp"
                            android:text="@string/genrePreview" />

                        <TextView
                            android:id="@+id/seriesBook"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="1dp"
                            android:paddingLeft="5dp"
                            android:paddingTop="5dp"
                            android:text="@string/seriesPreview" />

                        <TextView
                            android:id="@+id/languageBook"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="1dp"
                            android:paddingLeft="5dp"
                            android:paddingTop="5dp"
                            android:text="@string/languagePreview" />

                        <TextView
                            android:id="@+id/yearBook"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="1dp"
                            android:paddingLeft="5dp"
                            android:paddingTop="5dp"
                            android:text="@string/yearPreview" />

                        <TextView
                            android:id="@+id/pagesBook"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="1dp"
                            android:paddingLeft="5dp"
                            android:paddingTop="5dp"
                            android:text="@string/pagesPreview" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/descriptionBook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:minLines="1"
                android:paddingBottom="1dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:text="@string/descriptionPreview" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.v7.widget.ContentFrameLayout>